--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
+    <title>{% block title %} {% endblock %} - FlaskApp </title>
 </head>
 <body>
-    <h1>Hello, World!</h1>
+    {% block content %}
+    Hello
+    {% endblock %}
 </body>
 </html>
