--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,3 @@
 <footer class="text-center py-4">
-    <p>&copy; 2024 Ваше Ім'я. Усі права захищені.</p>
+    <p>&copy; 2024 Кравецька Вікторія. </p>
 </footer>
